--- a/crow/templates/main/index.html
+++ b/crow/templates/main/index.html
@@ -29,11 +29,12 @@
       <div class="col col-6">
         <p class="settings-share">Settings ■ API ■ Share!</p>
         <div class="prediction-container">
+          <h3 class="prediction-date">{{ predictionDate.strftime("%B %d, %Y %X %Z")  }}</h3>
           <h3 class="prediction-date">October 28th, 2020 09:30 EST</h3>
           <h1 class="prediction-price">$16149</h1>
           <h2 class="prediction-points">+3.5</h2>
           <p class="prediction-desc">Formulated by over<br>
-            <span class="bold">120836</span> independent trader<br>
+            <span class="bold">{{ sentiments }}</span> independent trader<br>
             sentiments.</p>  
         </div>
         <p class="crypto-prices"><span class="xbt">XBT</span> $13,419 ■ <span class="bch">BCH</span> $266 ■ <span class="eth">ETH</span> $404 ■ <span class="xmr">XMR</span> $136</p>
